# dpy-check

./: .gitignore  README.md  changelog.md  pyproject.toml
src/dpycheck/: __init__.py  _channel_perms.py  _error_handler.py  _guild_perms.py  _misc.py  _modifiers.py  _role.py  constants.py  exceptions.py  types.py  utils.py
src/dpycheck/ctx/: __init__.py  _check.py
src/dpycheck/itx/: __init__.py  _check.py
tests/: testbot.py
